--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,14 @@ android {
 //            schemaVersion 4
 //        }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 
 dependencies {
@@ -35,7 +43,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.jakewharton:butterknife:8.5.1'
-    compile 'io.reactivex:rxjava:1.2.1'
+//    compile 'io.reactivex:rxjava:1.2.1'
+    compile "io.reactivex.rxjava2:rxjava:2.0.0"
+
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
