显示每个故事的内容

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
 
     //greendao
     compile 'org.greenrobot:greendao:3.2.2'
+
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.15'
 }
