--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,8 @@ dependencies {
     compile 'org.greenrobot:greendao:3.2.2'
 
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.15'
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    // slider
+    compile 'com.daimajia.slider:library:1.1.5'
 }
