--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     // slider
     compile 'com.daimajia.slider:library:1.1.5'
+
+    // 进度条
+    compile 'com.github.ybq:Android-SpinKit:1.0.1'
 }
