图片模块框架搭建

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,18 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
 //        applicationId "com.example.louis.myzhihudemo"
         applicationId "com.louis.myzhihudemo"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        // 设置支持分包编译
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -76,4 +79,8 @@ dependencies {
 
     // 进度条
     compile 'com.github.ybq:Android-SpinKit:1.0.1'
+
+    // 设置支持分包编译
+    compile 'com.android.support:multidex:1.0.1'
+
 }
