--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.wdullaer:materialdatetimepicker:2.5.0'
     compile 'com.jaeger.recyclerviewdivider:library:1.0.1'
-//    compile 'com.github.chrisbanes:PhotoView:2.0.0'
+    compile 'com.github.chrisbanes:PhotoView:2.0.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     // dagger
@@ -84,4 +84,6 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     // dragsloplayout
     compile 'com.github.Rukey7:DragSlopLayout:1.0.3'
+
+    compile 'com.github.ybq:Android-SpinKit:1.0.1'
 }
