--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 20 13:45:17 CST 2017
-sdk.dir=E\:\\Android\\SDK
+#Tue Nov 21 14:46:49 CST 2017
+sdk.dir=/home/louis/Android/Sdk
