--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,30 @@
-apply plugin: 'com.android.application'
+
+if (isModule) {
+    apply plugin: 'com.android.application'
+} else {
+    apply plugin: 'com.android.library'
+}
 apply plugin: 'org.greenrobot.greendao'
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    sourceSets {
+        main {
+            if (isModule) {
+//                manifest.srcFile 'src/main/module/AndroidManifest.xml'
+            } else {
+//                manifest.srcFile 'src/main/AndroidManifest.xml'
+                java {
+                    exclude 'debug/**'
+                }
+            }
+        }
+    }
+    compileSdkVersion 26
+//    buildToolsVersion '26.0.2'
     defaultConfig {
 //        applicationId "com.example.louis.myzhihudemo"
         applicationId "com.louis.myzhihudemo"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -21,7 +38,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         greendao {
-            schemaVersion 4
+            schemaVersion 5
         }
     }
     packagingOptions {
@@ -39,13 +56,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:preference-v14:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.android.support:customtabs:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:preference-v14:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:support-v4:26.1.0'
+    compile 'com.android.support:customtabs:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.jakewharton:butterknife:8.5.1'
 //    compile 'io.reactivex:rxjava:1.2.1'
     compile "io.reactivex.rxjava2:rxjava:2.0.0"
