--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
 bash.exe.stackdump
+.idea/checkstyleidea-libs/
+.idea/checkstyleidea.tmp/
+.idea/kotlinc.xml
+.idea/shelf/
